# graphpype

./: .gitignore  .pseudocode.md.swp  README.md  __init__.py  editableInstall.sh  plan.txt  pseudocode.md  pyproject.toml  setup.py  to_do.md
docs/doctrees/: environment.pickle  index.doctree
docs/html/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
docs/html/_sources/: index.rst.txt
docs/source/: conf.py  contributing.rst  contributingguide.rst  graphpype.rst  index.rst  modules.rst  pipes.rst  quickstart.rst
examples/recipe_templates/: default.json  generic.py
neurographpype/: pipe.py  stats.py
src/: submodule_analysis.py  submodule_pipelines.py  submodule_plots.py  submodule_preprocessing.py  submodule_statistics.py  submodule_utils.py
src/graphpype/: .graph.py.swp  \  __init__.py  graph.py  pipe.py  stats.py  utils.py
src/graphpype.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/neuroGraphPype/: graph.py  utils.py
