[project]
name = "NetworkAnalysis"

description = "Streamlining and automating network analysis with a focus on neuroimaging data."

version = "0.1.0"

authors = [
	{ name = "Nicholas M. Gale", email = "nick.gale1993@gmail.com" }
]

readme = "README.md"

requires-python = ">=3.8"

dependencies = [
	"numpy",
	"scipy",
	"nilearn",
	"pandas",
	"matplotlib",
	"networkx"
]

[project.optional.dependencies]
dev = [
	"tensorflow"
]

[project.urls]
"Homepage" = "https://github.com/Nick-Gale/NetworkAnalysis"

